# OwlGram

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  build.gradle  gradle.properties  gradlew  private_key.pepk  settings.gradle
.github/: FUNDING.yml
TMessagesProj/: build.gradle  google-services.json  proguard-rules.pro
TMessagesProj/config/: release.jks
TMessagesProj/config/debug/: AndroidManifest.xml  AndroidManifest_SDK23.xml
TMessagesProj/config/release/: AndroidManifest.xml  AndroidManifest_SDK23.xml  AndroidManifest_standalone.xml
TMessagesProj/jni/: CMakeLists.txt  lottie.cpp
TMessagesProj/jni/intro/: IntroRenderer.c
TMessagesProj/jni/ping/: CMakeLists.txt  FIXME.md  ping.c  ping.h  ping_error.c
TMessagesProj/jni/rlottie/inc/: rlottie.h
TMessagesProj/jni/rlottie/src/lottie/: lottieanimation.cpp  lottieloader.cpp  lottieloader.h  lottieparser.cpp  lottieparser.h
TMessagesProj/jni/tgnet/: ApiScheme.cpp  ApiScheme.h  ConnectionsManager.cpp
TMessagesProj/release/: output-metadata.json
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/assets/: amoled.attheme  arctic.attheme  bluebubbles.attheme  countries.txt  darkblue.attheme  day.attheme  monet_dark.attheme  monet_light.attheme  night.attheme
TMessagesProj/src/play/: AndroidManifest.xml
TMessagesProj_App/: build.gradle  google-services.json
TMessagesProj_AppHuawei/: agconnect-services.json  build.gradle
Tools/: ccache  owlgram.shapeshifter  telegram.shapeshifter
Tools/ccache/linux/: ccache
gradle/wrapper/: gradle-wrapper.properties
(+672 files in other folders)
